# scratchpad

./: .gitignore  .gitmodules  10_companies_2022-12-31.csv  1st-place-submission-code.ipynb  README.md  cifar10.ipynb  coco128.csv  dataset.ipynb  env311.yml  fe.ipynb  forbes global 2022(2000 companies) - companies.csv  my_app.py  mypy_test.ipynb  od.py  pico_oled_ups_a.py  ray.ipynb  requirements.txt  retinanet.ipynb  stablediff.ipynb  test.ipynb  transforms.py  vesuvius-challenge-example-submission.html  vesuvius-challenge-example-submission.ipynb
ai/: deepseek.ipynb  deepseek_tokenizer.py  pyproject.toml
clip/: clip-client-query-api.ipynb  clip.py  pyproject.toml
minio-app/: minio-app.ipynb  pyproject.toml
pico/: aht20.py  ahtx0_deepsleep.py  at20.py  at20_geek.py  blte_main.py  bluetooth_serve.py  boot.py  boot_geek.py  crc8_helper.py  ds3231.py  ds3231_gen.py  env.json  firefly.py  geek_2040.py  image.py  lora-app-server.toml  loraserver.toml  lps22_server.py  lps22hbtr.py  main.py  main2.py  main_aht20.py  main_bme20.py  main_mqtt.py  mongo_crud.py  mqtt.py  oled.py  package_heltec_esp32_index.json  pyproject.toml  readtemp.py  scan.py  sky2040.uf2  smbus2.py  web_server.py
pico/1.3inch-OLED-HAT-Code/RaspberryPi/C/: Makefile
pico/1.3inch-OLED-HAT-Code/RaspberryPi/python/: SH1106.py  config.py  key_demo.py  main.py
pico/CircuitPython_Digital_In_Out/: README.txt
pico/CircuitPython_NeoPixel/: README.txt
pico/E-Paper_ESP32_Driver_Board_Code/: Version_CN.txt  Version_EN.txt  app-release.apk
pico/E-Paper_ESP32_Driver_Board_Code/Loader_esp32bt/: epd.h  epd13in3.h  epd2in13.h  epd2in9.h  epd4in2.h  srvr.h
pico/E-Paper_ESP32_Driver_Board_Code/Loader_esp32wf/: epd.h  epd13in3.h  epd2in13.h  epd2in9.h  epd4in2.h  epd4in26.h  scripts.h  srvr.h
pico/ESP32-S3-GEEK_Code/: ReadMe_EN.txt  Readme_CN.txt
pico/ESP32-S3-GEEK_Code/ADC/ADC_Read/: ADC_Read.ino
pico/ESP32-S3-GEEK_Code/Button/OneButton/: OneButton.ino
pico/ESP32-S3-GEEK_Code/IIC/IIC_BME68X_Sensor/: IIC_BME68X_Sensor.ino
pico/ESP32-S3-GEEK_Code/LCD/LCD_Button/: LCD_Button.ino  image.cpp  image.h
pico/ESP32-S3-GEEK_Code/LCD/LCD_Time/: LCD_Time.ino
pico/ESP32-S3-GEEK_Code/MQTT/MQTT_BLE_Keyboard/: MQTT_BLE_Keyboard.ino
pico/ESP32-S3-GEEK_Code/MQTT/MQTT_sub_pub/: MQTT_sub_pub.ino
pico/ESP32-S3-GEEK_Code/UART/UART0/: UART0.ino
pico/ESP32-S3-GEEK_Code/WIFI/WIFI_AP_LCD/: Readme.txt  WIFI_AP_LCD.ino  WIFI_Driver.cpp  WIFI_Driver.h  image.cpp  image.h
pico/ESP32-S3-GEEK_Code/WIFI/WIFI_TCP_Client/: WIFI_TCP_Client.ino  image.cpp
pico/ESP32-S3-GEEK_Code/WIFI/WIFI_TCP_Server/: WIFI_TCP_Server.ino
pico/ESP32-S3-GEEK_Code/WIFI/WIFI_Web_Server/: WIFI_Driver.cpp  WIFI_Web_Server.ino
pico/ESP32-S3-GEEK_Code/Wireless_USB_flash_drive/usb_msc_wireless_disk/: sdkconfig  sdkconfig.old
pico/ESP32-S3-Matrix-Demo/Color/: Color.ino  WS_Matrix.cpp  WS_Matrix.h
pico/ESP32-S3-Matrix-Demo/Font/: Font.ino  WS_Flow.cpp  WS_Flow.h
pico/ESP32-S3-Matrix-Demo/Game/: Game.ino  WS_Matrix.cpp  WS_Matrix.h  WS_QMI8658.cpp  WS_QMI8658.h
pico/ESP32-S3-Matrix-Demo/HTTP/: HTTP.ino  WS_Flow.cpp  WS_Flow.h  WS_WIFI.cpp  WS_WIFI.h
pico/HTIT-WSL_V3_HF/: flash.bat
pico/HTIT-WSL_V3_HF/HTIT-WSL_V3_HF/: HTIT-WSL_V3_HF.ino
pico/I2C_Scanners/circuitpython/: README.txt
pico/PT_esp32/: IMU.cpp  IMU.h  IMU_AK09918.cpp  IMU_AK09918.h  IMU_QMI8658.cpp  IMU_QMI8658.h  PT_esp32.ino  WebPage.h  baseFunctions.h  busServoCtrl.h  config.h  connectionFuncs.h  motorCtrl.h  powerInfo.h  screenCtrl.h
pico/Pico-UPS-A/c/: CMakeLists.txt  Pico_UPS.cpp
pico/Pico-rtc-ds3231_code/c/: CMakeLists.txt  main.c
pico/Pico-rtc-ds3231_code/c/ds3231/: CMakeLists.txt  ds3231.c  ds3231.h
pico/Pico-rtc-ds3231_code/python/: ds3231.py
pico/RP2040-GEEK-CODE/: pico-lcd-1_44_asm.stp
pico/RP2040-GEEK-CODE/c/01-LCD/: CMakeLists.txt  main.c
pico/RP2040-GEEK-CODE/c/03-FatFs/: CMakeLists.txt  FatFS_SPI_example.cpp  hw_config.c
pico/RP2040-GEEK-CODE/c/uf2/: 01-LCD.uf2  02-picoprobe.uf2  03-FatFS.uf2
pico/RP2040-GEEK-CODE/python/01-LCD/: ReadmeCN.txt  ReadmeEN.txt  bmp_reader.py  lcd_example.py
pico/RP2040-GEEK-CODE/python/02-SD/: ReadmeCN.txt  ReadmeEN.txt  boot.py
pico/RP2040-LoRa-TestCode/: CMakeLists.txt
pico/RP2040-LoRa-TestCode/examples/pico-ping-pong/: CMakeLists.txt  main.c
pico/RP2040-LoRa-TestCode/src/: board-config.h  board.c  eeprom-board.c  gpio-board.c  sx1262-board.c
pico/Rp2040-lora-code/: CMakeLists.txt
pico/Rp2040-lora-code/examples/otaa_temperature_led/: config.h  main.c
pico/Rp2040-lora-code/src/: lorawan.c
pico/Sense_HAT_C_Demo/STM32/ADS1015/: .mxproject  ADS1015.ioc
pico/Sense_HAT_C_Demo/STM32/IMU/: .mxproject  IMU.ioc
pico/WeatherTDisplayS3/: WeatherTDisplayS3.ino  bigFont.h  font18.h  tinyFont.h
pico/WiFi_LoRaWAN/: WiFi_LoRaWAN.ino
pico/adafruit-aht20/: README.txt
pico/adafruit-aht20/CircuitPython 8.x/: code.py
pico/bluetooth/: ble_client.py  blte_main.py
pico/bme280/: main.py
pico/circultpython/: boot_out.txt  code.py
pico/esp32s3/: code.py  led.py  main.py  neopixel.py  test_pin.py
pico/hello_world/hello_world/: sdkconfig  sdkconfig.old
pico/lora_tx_test/: lora_test.sh  loratxtest.php  reset_lgw.sh  test_loragw_hal_tx  txtest.php
pico/monochrome-oled-breakouts/: README.txt
pico/neopixels-buttons/: README.txt
pico/neopixels-buttons/CircuitPython 8.x/: code.py
pico/npu/: readme.md
pico/pan_tilt_carmera/pt_rpi/: app.py  audio_ctrl.py  autorun.sh  camera_opencv.py  requirements.txt  setup.sh
pico/pico-lorawan/src/: lorawan.c
pico/pico-maker/: code.py
pico/pico_maker/: boot_out.txt  code.py
pico/pt_rpi/: base_camera.py  base_ctrl.py  config.yaml  serial_lidar_test.py  serial_simple_ctrl.py  setup.sh
pico/pt_rpi/templates/: contrl.js  index.html  style.css
postgres/: .env.etc  connect.ipynb  docker-compose.yml  models.py  pyproject.toml  test.ipynb
postgres/core/: config.py  database_session.py
rag/: agents.ipynb  embedding.ipynb  graph.ipynb  graphllm.ipynb  groq.ipynb  neo4j_cypher.ipynb  pyproject.toml  rag-pinecone.py  rag.ipynb  server.py  websocket.ipynb
(+714 files in other folders)
