[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "furyhawk",email = "furyx@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "openai (>=1.61.0,<2.0.0)",
    "transformers (>=4.48.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
