[tool.poetry]
name = "minio-app"
version = "0.1.0"
description = ""
authors = ["Teck Meng <furyx@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
minio = "^7.2.6"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
