[tool.poetry]
name = "pico"
version = "0.1.0"
description = ""
authors = ["furyhawk <furyx@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
thonny = "^4.1.4"
micropython-rp2-pico-w-stubs = "^1.20.0.post5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
