[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Teck Meng <furyx@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.19"
langchain-community = "^0.0.38"
neo4j = "^5.20.0"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
langchain-groq = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
